# wp-epub-rs-emini

./: README.md
.github/workflows/: build-android.yml  build-epub-uniffi-android.yml  build-epub-uniffi-jvm.yml  build-jvm.yml  release-android.yml  release-jvm.yml
wp-android-emini/: .gitignore
wp-android-emini/app/: build.gradle.kts
wp-android-emini/app/src/main/: AndroidManifest.xml
wp-android-emini/app/src/main/java/us/wpdl/wprust/: DownloadActivity.kt  MainActivity.kt
wp-android-emini/app/src/main/res/layout/: activity_main.xml
wp-android-emini/app/src/main/res/values/: strings.xml
wp-android-emini/gradle/: libs.versions.toml
wp-android-emini/gradle/wrapper/: gradle-wrapper.properties
wp-backend-rs-emini/wattpad-rs/: Cargo.toml
wp-backend-rs-emini/wp-epub-mini/: Cargo.toml
wp-backend-rs-emini/wp-epub-mini/src/: lib.rs
wp-jvm-emini/: .gitignore  settings.gradle.kts
wp-jvm-emini/app/: build.gradle.kts
wp-jvm-emini/app/src/main/kotlin/uniffi/uniffi_wp_epub_mini/: uniffi_wp_epub_mini.kt
wp-jvm-emini/app/src/main/kotlin/us/wprust/jvm/: Main.kt
wp-jvm-emini/app/src/main/kotlin/us/wprust/jvm/components/menubar/: MenuBar.kt
wp-jvm-emini/app/src/main/kotlin/us/wprust/jvm/components/menubar/menu_panels/: About.kt
wp-jvm-emini/app/src/main/kotlin/us/wprust/jvm/scenes/: CheckingStoryPanel.kt  CheckoutPanel.kt  DownloadResultPanel.kt
wp-jvm-emini/app/src/main/kotlin/us/wprust/jvm/utils/: AppSettings.kt  LafAction.kt  StoryIdFromPartId.kt
wp-jvm-emini/app/src/main/kotlin/us/wprust/jvm/utils/basic_details/: GetBasicStoryData.kt
wp-jvm-emini/gradle/: libs.versions.toml
wp-mini-epub-uniffi/: .gitignore  Cargo.toml
wp-mini-epub-uniffi/.cargo/: config.toml
wp-mini-epub-uniffi/src/: api.rs  error.rs  lib.rs  runtime.rs
