[package]
name = "wp-epub-mini"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "uniffi_wp_epub_mini"

[dependencies]
once_cell = "1.21.3"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
uniffi = { version = "0.30.0", features = ["cli", "tokio"] }
wp-mini-epub = "0.8.2"
anyhow = "1.0.100"

[build-dependencies]
uniffi = { version = "0.30.0", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[profile.release]
strip = true
lto = true